--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "private": true,
+  "workspaces": [
+    "docs/.vuepress/theme"
+  ],
   "name": "vuepress2-demo",
   "version": "1.0.0",
   "main": "index.js",
