--- a/package.json
+++ b/package.json
@@ -1,8 +1,4 @@
 {
-  "private": true,
-  "workspaces": [
-    "docs/.vuepress/theme"
-  ],
   "name": "vuepress2-demo",
   "version": "1.0.0",
   "main": "index.js",
@@ -12,6 +8,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^2.0.0-beta.26",
+    "@vuepress/plugin-palette": "^2.0.0-beta.26",
+    "@vuepress/plugin-theme-data": "^2.0.0-beta.26",
     "vuepress": "^2.0.0-beta.26"
   }
 }
