--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^2.0.0-beta.26",
     "@vuepress/plugin-palette": "^2.0.0-beta.26",
+    "@vuepress/plugin-prismjs": "^2.0.0-beta.26",
+    "@vuepress/plugin-search": "^2.0.0-beta.26",
     "@vuepress/plugin-theme-data": "^2.0.0-beta.26",
     "vuepress": "^2.0.0-beta.26"
   }
