--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "license": "MIT",
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^2.0.0-beta.26",
+    "@vuepress/plugin-nprogress": "^2.0.0-beta.26",
     "@vuepress/plugin-palette": "^2.0.0-beta.26",
-    "@vuepress/plugin-prismjs": "^2.0.0-beta.26",
     "@vuepress/plugin-search": "^2.0.0-beta.26",
+    "@vuepress/plugin-shiki": "^2.0.0-beta.5",
     "@vuepress/plugin-theme-data": "^2.0.0-beta.26",
     "vuepress": "^2.0.0-beta.26"
   }
