--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@vuepress/plugin-shiki": "^2.0.0-beta.5",
     "@vuepress/plugin-theme-data": "^2.0.0-beta.26",
     "vuepress": "^2.0.0-beta.26"
+  },
+  "dependencies": {
+    "dayjs": "^1.10.7"
   }
 }
