--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,10 @@
     "composite": true,
     "declaration": true,
     "declarationMap": false,
-    "lib": ["DOM", "ES2020"],
-    "module": "CommonJS",
+    // "lib": ["DOM", "ES2020"],
+    "lib": ["ESNext", "DOM"],
+    // "module": "CommonJS",
+    "module": "esnext",
     "moduleResolution": "node",
     "newLine": "lf",
     "noEmitOnError": true,
@@ -15,6 +17,7 @@
     "strict": true,
     "strictNullChecks": true,
     "target": "ES2018",
+    "baseUrl": "./",
     "paths": {
       "@temp/*": ["docs/.vuepress/.temp/*"]
     }
