--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^2.0.0-beta.26",
+    "@vuepress/plugin-git": "^2.0.0-alpha.1",
     "@vuepress/plugin-nprogress": "^2.0.0-beta.26",
     "@vuepress/plugin-palette": "^2.0.0-beta.26",
     "@vuepress/plugin-search": "^2.0.0-beta.26",
