--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vuepress": "^2.0.0-beta.26"
   },
   "dependencies": {
-    "dayjs": "^1.10.7"
+    "dayjs": "^1.10.7",
+    "lodash.orderby": "^4.6.0"
   }
 }
